# qbot

./: .gitignore  Cargo.toml  README.md
frontend/: .env.production  README.md  package-lock.json  package.json  vue.config.js
frontend/public/dashboard/: index.html
frontend/src/: Home.vue  main.js
frontend/src/components/: Queue.vue  QueueControls.vue  QueueEntry.vue
frontend/src/dashboard/: Dashboard.vue  main.js
frontend/src/router/: index.js
frontend/src/views/: Dashboard.vue  Home.vue
migrations/: 20210329163136_create_queue.down.sql  20210329163136_create_queue.up.sql  20210329163145_create_bot.down.sql  20210329163145_create_bot.up.sql  20210405031652_create_users.up.sql  20210405032130_alter_chat_bot_foreign_key.down.sql  20210405032130_alter_chat_bot_foreign_key.up.sql  20210405034329_alter_queue_foreign_key.down.sql  20210405034329_alter_queue_foreign_key.up.sql  20210405034654_unique_foreign_key_constraint_on_chat_bot.down.sql  20210405034654_unique_foreign_key_constraint_on_chat_bot.up.sql  20210410163816_nullable_refresh_token_on_users.down.sql  20210410163816_nullable_refresh_token_on_users.up.sql  20210410193858_unique_email_constraint_on_users.down.sql  20210410193858_unique_email_constraint_on_users.up.sql  20210428210600_create_users.up.sql  20210428231801_create_queues.down.sql  20210428231801_create_queues.up.sql
src/: chatbot.rs  database.rs  lib.rs  main.rs
src/server/: api.rs  web.rs
src/server/authentication/: errors.rs  mod.rs  twitch.rs
