[package]
name = "qbot"
version = "0.4.0"
authors = ["Eric Huff <thegreaterici@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.11.0"
dotenv = "0.15"
futures = "0.3"
irc = "0.15"
jsonwebtoken = "7"
log = "0.4"
native-tls = "0.2"
reqwest = "0.11"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
simple_logger = "1.11"
sqlx = { version = "0.5", features = ["chrono", "json", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.2", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3"
